finally fix scrollbar appearing over header

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -77,10 +77,20 @@ p {
 	margin: 0;
 }
 
-.section{
+.header {
+	height: 52px;
+	@media (min-width: 768px) {
+		height: 91px;
+	}
+}
+
+.section {
 	position: absolute;
 	top: 52px;
 	left: 0;
+	right: 0;
+	bottom: 0;
+	overflow-y: auto;
 	padding: 4vw 7vw 7vw 7vw;
 	min-height: calc(100vh - 52px - 11vw);
 	height: auto;
